fix: class